step 1 updating mostly to 2023

--- a/flask-api/.env
+++ b/flask-api/.env
@@ -1,4 +1,4 @@
 SECRET_KEY="super secret guy"
 MOVIE_DATABASE_USERNAME="neo4j"
-MOVIE_DATABASE_PASSWORD="pan-track-orders"
-MOVIE_DATABASE_URL="bolt://localhost"
+MOVIE_DATABASE_PASSWORD="k6RkR6t1ICLQUpW3VM9GPQjM_vUcOrjNCujgd1RoyxE"
+MOVIE_DATABASE_URL="neo4j+s://9f990187.databases.neo4j.io"
